converted type list to implement the getTypeList function in the CopyableObject interface